--- a/src/napari_zooniverse/napari.yaml
+++ b/src/napari_zooniverse/napari.yaml
@@ -14,9 +14,12 @@ contributions:
     - id: napari-zooniverse.make_sample_data
       python_name: napari_zooniverse._sample_data:make_sample_data
       title: Load sample data from Plugin to manipulate large three-dimensional data and upload it to a Zooniverse project
-    - id: napari-zooniverse.make_qwidget
-      python_name: napari_zooniverse._widget:ExampleQWidget
-      title: Make example QWidget
+    - id: napari-zooniverse.preprocess_widget
+      python_name: napari_zooniverse._preprocess_widget:PreprocessWidget
+      title: Preprocessing Widget
+    - id: napari-zooniverse.upload_widget
+      python_name: napari_zooniverse._upload_widget:UploadWidget
+      title: Upload Widget
   readers:
     - command: napari-zooniverse.get_reader
       accepts_directories: false
@@ -33,5 +36,7 @@ contributions:
       display_name: Plugin to manipulate large three-dimensional data and upload it to a Zooniverse project
       key: unique_id.1
   widgets:
-    - command: napari-zooniverse.make_qwidget
-      display_name: Example QWidget
+    - command: napari-zooniverse.preprocess_widget
+      display_name: Preprocessing Widget
+    - command: napari-zooniverse.upload_widget
+      display_name: Upload Widget
